--- a/package.json
+++ b/package.json
@@ -1,28 +1,28 @@
 {
   "name": "expalmer.github.io",
   "description": "My Blog",
-  "version": "0.0.1",
+  "version": "0.1.0",
+  "author": "expalmer@gmail.com",
+  "license": "MIT",
   "dependencies": {
-    "handlebars": "^2.0.0-alpha.4",
-    "lodash.clone": "^2.4.1",
-    "metalsmith": "^0.9.0",
-    "metalsmith-clean-css": "0.0.3",
-    "metalsmith-collections": "^0.4.1",
-    "metalsmith-concat": "0.0.2",
+    "autoprefixer": "^6.1.2",
+    "metalsmith": "^2.1.0",
+    "metalsmith-clean-css": "^2.0.0",
+    "metalsmith-collections": "^0.7.0",
+    "metalsmith-concat": "^3.0.3",
     "metalsmith-drafts": "0.0.1",
-    "metalsmith-gist": "0.0.1",
-    "metalsmith-html-minifier": "^1.0.0",
+    "metalsmith-layouts": "^1.4.1",
     "metalsmith-markdown": "^0.2.1",
-    "metalsmith-paginate": "^0.2.1",
-    "metalsmith-permalinks": "^0.3.2",
-    "metalsmith-sass": "^0.3.0",
-    "metalsmith-tags": "^0.6.1",
-    "metalsmith-templates": "^0.5.2",
-    "metalsmith-uglify": "0.0.6",
+    "metalsmith-permalinks": "^0.4.0",
+    "metalsmith-postcss": "^3.1.0",
+    "metalsmith-tags": "^0.13.0",
+    "metalsmith-uglify": "^1.2.1",
     "metalsmith-untemplatize": "^0.1.0",
-    "moment": "^2.7.0",
-    "path": "^0.4.9",
-    "q": "^1.0.1",
-    "request": "^2.40.0"
+    "moment": "^2.10.6",
+    "postcss-css-variables": "^0.5.1",
+    "postcss-nested": "^1.0.0",
+    "postcss-partial-import": "^1.3.0",
+    "postcss-simple-vars": "^1.1.0",
+    "swig": "^1.4.2"
   }
 }
